# ShaderRunner

./: All Concerter.txt  CMakeLists.txt  Helper  Potenz  Prompt  Readme_searcher.md  SENSOR_PHYSICS_RESEARCH.md  SENSOR_SHADER_REFERENCE.md  Search.py  TECHNICAL_EXPLANATION.md
shaders/: dark_noise.frag  fullscreen_quad.vert  noise_utils.glsl  photon_noise.frag  prnu.frag  read_noise.frag
src/: DarkNoiseEffect.h  INoiseEffect.h  PRNUEffect.h  PhotonNoiseEffect.h  PostProcessChain.cpp  PostProcessChain.h  PostProcessing.cpp  PostProcessing.h  ReadNoiseEffect.h  SensorNoiseSimulator.h  main.cpp
